--- a/Remote.App/Remote.App.csproj
+++ b/Remote.App/Remote.App.csproj
@@ -170,6 +170,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Remote.App.hocon">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
